--- a/app/templates/src/index.html
+++ b/app/templates/src/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="FnStacks" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="FnStacks">
-
-</head>
-
-<body>
-  <div id="root"/>
-</body>
-
+  <body>
+    <div id="root" />
+  </body>
 </html>
