--- a/app/templates/src/layout/components/layout.less
+++ b/app/templates/src/layout/components/layout.less
@@ -1,4 +1,4 @@
-@import "../../styles/less/themes/vars.less";
+@import '../../styles/less/themes/vars.less';
 
 :global {
   .ant-layout-header {
@@ -70,8 +70,6 @@
   }
 }
 
-
-
 .logo {
   height: 96px;
   display: flex;
@@ -99,7 +97,7 @@
 }
 
 .sidemenu {
-  :global{
+  :global {
     .ant-menu-item {
       width: 100%;
     }
